--- a/Views/About.ejs
+++ b/Views/About.ejs
@@ -1,1 +1,25 @@
-<-- no input -->
+<% include ./Partials/Nav.ejs %>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>What's Happening?</title>
+  </head>
+  <body>
+    <h1>We Are What's Happening</h1>
+
+    <img class="cdj" src="">
+
+    <div class="contact">
+      <h3>Say Hello</h3>
+      
+      <form action="/" method="post">
+        <input type="text" placeholder="Leave Comments, Questions, or Suggestions Here!">
+        <textarea name="contactUs"></textarea>
+        <input type="submit">
+      </form>
+    </div>
+
+  </body>
+</html>
