--- a/Views/Events/Edit.ejs
+++ b/Views/Events/Edit.ejs
@@ -1,4 +1,6 @@
+<-- needs eventsList -->
 
+<% include ../partials/nav.ejs %>
 
-<% include ../Partials/Events/Edit.ejs %>
+<% include ../partials/events/edit.ejs %>
 
