--- a/Views/LogIn.ejs
+++ b/Views/LogIn.ejs
@@ -1,9 +1,9 @@
 <-- Input: None -->
 
-<% include ./Patials/Nav.ejs %>
+<% include ./partials/nav.ejs %>
 
-<% include ./Partials/Auth/LogIn.ejs %>
+<% include ./partials/auth/logIn.ejs %>
 
-<% include ./Partials/Auth/Register.ejs %>
+<% include ./partials/auth/register.ejs %>
 
-<% include ./Partials/Footer.ejs %>
+<% include ./partials/footer.ejs %>
