--- a/Views/Events/New.ejs
+++ b/Views/Events/New.ejs
@@ -1,3 +1,3 @@
 <-- needs user -->
-
-<% include ../Partials/Events/New.ejs %>
+<% include ../partials/nav.ejs %>
+<% include ../partials/events/new.ejs %>
