--- a/Views/Home.ejs
+++ b/Views/Home.ejs
@@ -1,5 +1,6 @@
 <--  Input: an array of all events  -->
 
-<% include ./Partials/Nav.ejs %>
 
-<% include ./Partials/Events.Show.ejs %>
+<% include ./partials/nav.ejs %>
+
+<% include ./partials/events/list.ejs %>
