--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <% include ./partials/nav.ejs %>
 
-<% include ./partials/auth/logIn.ejs %>
+<% include ./partials/auth/login.ejs %>
 
 <% include ./partials/auth/register.ejs %>
 
