--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <--  Input: an array of all events  -->
 
 
-<% include ../partials/nav.ejs %>
+<% include /partials/nav.ejs %>
 
 <% include ./partials/events/list.ejs %>
 
