--- a/views/partials/events/new.ejs
+++ b/views/partials/events/new.ejs
@@ -1,5 +1,14 @@
 <section>
-    
+
 <-- form to create new event here, needs user as input -->
+<form action="/events" method="post">
+        <input type="text" name="Name" placeholder="Name"/><br/>
+        <input type="date" name="Date" placeholder="Date"/><br/>
+        <input type='text' name="Time" placeholder="Time"/><br/>
+        <input type='text' name="Location" placeholder="Location Address"/><br/>
+        <input type='text' name="Type" placeholder="Event Type"/><br/>
+        <input type='text' name="About" placeholder="About Event"/><br/>
+        <button type="submit">submit</button>
+      </form>
 
 </section>
