--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,8 @@
 
 
 <% include ./partials/nav.ejs %>
+<% include ../partials/nav.ejs %>
+<% include /partials/nav.ejs %>
 
 <% include ./partials/events/list.ejs %>
 
