more heroku tests

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
 <% include ./partials/nav.ejs %>
 <% include ../partials/nav.ejs %>
 <% include /partials/nav.ejs %>
+<% include ./views/partials/nav.ejs%>
 
 <% include ./partials/events/list.ejs %>
 
