--- a/views/partials/auth/Register.ejs
+++ b/views/partials/auth/Register.ejs
@@ -1,5 +1,8 @@
 <section>
-
-<-- Registration Form Here, needs no input -->
-
+  <h3>Register</h3>
+    <form action="/auth/register" method="POST">
+      <input type="text" name="username" placeholder="username"> <br>
+      <input type="text" name="password" placeholder="password"> <br>
+      <button type="submit">Register</button>
+    </form>
 </section>
