login page is working. huzzah

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+<h1>hi</h1>
+
 <-- Input: None -->
 
 <% include ./partials/nav.ejs %>
@@ -7,3 +16,6 @@
 <% include ./partials/auth/register.ejs %>
 
 <% include ./partials/footer.ejs %>
+
+  </body>
+</html>
