home and new routes tested and working

--- a/views/events/New.ejs
+++ b/views/events/New.ejs
@@ -1,4 +1,11 @@
-<-- needs user -->
-<% include ../partials/nav.ejs %>
-<% include ../partials/events/new.ejs %>
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <% include ../partials/nav.ejs %>
+    <% include ../partials/events/new.ejs %>  
+  </body>
+</html>
