working on nav bar

--- a/views/partials/Nav.ejs
+++ b/views/partials/Nav.ejs
@@ -1,7 +1,14 @@
-<nav>
+<nav class="NavBar">
+
+<button id="navbutton">&#x2630<button>
     <ul>
 
-    <--  Menu Items, needs loggedin from session -->
+    <li><a href="/events">home</a></li>
+    <li><a href="/profile">profile</a></li>
+
+    <li><a href="/auth/login">log in/register</a></li>
+
+    <li><a href="/auth/logout">log out</a><li>
 
     </ul>
 </nav>
