removed copypasta comments from server file

--- a/views/partials/Nav.ejs
+++ b/views/partials/Nav.ejs
@@ -1,6 +1,6 @@
 <nav class="NavBar">
 
-<button id="navbutton">&#x2630<button>
+<button id="navButton">&#x2630<button>
     <ul>
 
     <li><a href="/events">home</a></li>
