navbar partial, profile ejs, routes in ReadMe

--- a/views/partials/Nav.ejs
+++ b/views/partials/Nav.ejs
@@ -1,5 +1,13 @@
 <nav>
     <ul>
+      <div class='navbar'>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/:id/profile">My Profile</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/logout">Logout</a></li>
+      </ul>
+      </div>
 
     <--  Menu Items, needs loggedin from session -->
 
