--- a/views/events/Edit.ejs
+++ b/views/events/Edit.ejs
@@ -1,7 +1,13 @@
-<-- needs eventsList -->
-
-<% include ../partials/nav.ejs %>
-
-<% include ../partials/events/edit.ejs %>
-
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Edit <%=Event.name%> </h1>
+    <% include ../partials/nav.ejs %>
+    <% include ../partials/events/edit.ejs %>
+    <a href="/">Back</a>
+  </body>
+</html>
