--- a/views/events/New.ejs
+++ b/views/events/New.ejs
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ADD A NEW EVENT</title>
   </head>
   <body>
     <% include ../partials/nav.ejs %>
-    <% include ../partials/events/new.ejs %>  
+    <% include ../partials/events/new.ejs %>
   </body>
 </html>
