--- a/views/events/Show.ejs
+++ b/views/events/Show.ejs
@@ -1,3 +1,12 @@
-<-- Needs user and event -->
-
-<% ../partials/events/show.ejs %>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title><%=event.title%></title>
+  </head>
+  <body>
+  <h1><%=event.title%></h1>
+  <% ../partials/events/show.ejs %>
+  <a href="/events">Back</a>
+  </body>
+</html>
