fixed readme formatting

--- a/views/partials/auth/register.ejs
+++ b/views/partials/auth/register.ejs
@@ -1,8 +1,11 @@
 <section>
   <h3>Register</h3>
     <form action="/auth/register" method="POST">
-      <input type="text" name="username" placeholder="username"> <br>
+
+      <!-- replace username with email address -->
+      <input type="email" name="username" placeholder="username"> <br>
       <input type="text" name="password" placeholder="password"> <br>
+
       <button type="submit">Register</button>
     </form>
 </section>
