fixed bug in edit.ejs

--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Edit <%=Event.name%> </h1>
+    <h1>Edit <%=event.name%> </h1>
     <% include ../partials/nav.ejs %>
     <% include ../partials/events/edit.ejs %>
     <a href="/">Back</a>
