user profile form done

--- a/views/partials/auth/register.ejs
+++ b/views/partials/auth/register.ejs
@@ -3,8 +3,9 @@
     <form action="/auth/register" method="POST">
 
       <!-- replace username with email address -->
-      <input type="email" name="username" placeholder="username"> <br>
+      <input type="name" name="username" placeholder="username"> <br>
       <input type="text" name="password" placeholder="password"> <br>
+
 
       <button type="submit">Register</button>
     </form>
