--- a/views/partials/auth/Edit.ejs
+++ b/views/partials/auth/Edit.ejs
@@ -1,5 +1,25 @@
 <section>
 
-<-- Edit user form here, needs user
+<form action="/:id/profile method="put" method="post">
+
+
+
+<input type="text" name="username" value="<%=user.username%>">/><br>
+
+<input type="text" name="password" value="<%=user.password%>">/><br>
+
+<input type="email" name="emailAddress" value="<%=user.emailAddress%>">/><br>
+
+<input type="text" name="firstName" value="<%=user.firstName%>">/><br>
+
+<input type="text" name="lastName" value="<%=user.lastName%>">/><br>
+
+<input type="url" name="image" value="<%=user.image%>">/><br>
+
+<input type="organization" name="orginazation" value="<%=user.orginzation%>"/><br>
+
+<input type="submit" value="Update User"/>
+
+</form>
 
 </section>
