--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,16 @@
 <nav class="NavBar">
 
-<button id="navButton">&#x2630<button>
+<button id="navButton">&#x2630</button>
       <div class='navbar'>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/events">Global Events</a></li>
+        <!--if logged in-->
         <li><a href="/:id/profile">My Profile</a></li>
-        <li><a href="/login">Login</a></li>
         <li><a href="/logout">Logout</a></li>
+        <!-- if not logged in-->
+        <li><a href="/login">Login</a></li>
+        <!-- -->
+        <li><a href="/about">About</a></li>
       </ul>
       </div>
 
