head tag added to all show pages

--- a/views/partials/events/new.ejs
+++ b/views/partials/events/new.ejs
@@ -1,5 +1,5 @@
 <section>
-<form action="/events" method="post">
+<form action="/" method="POST">
         <input type="text" name="Name" placeholder="Name"/><br/>
         <input type="date" name="Date" placeholder="Date"/><br/>
         <input type='text' name="Time" placeholder="Time"/><br/>
