--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
     <title>What's Happening?</title>
   </head>
   <body>
@@ -13,7 +15,7 @@
 
     <div class="contact">
       <h3>Say Hello</h3>
-      
+
       <form action="/" method="post">
         <input type="text" placeholder="Leave Comments, Questions, or Suggestions Here!">
         <textarea name="contactUs"></textarea>
@@ -23,4 +25,3 @@
 
   </body>
 </html>
-
