--- a/views/partials/events/list.ejs
+++ b/views/partials/events/list.ejs
@@ -3,7 +3,7 @@
         <ul>
           <% for(let i = 0; i < events.length; i++){ %>
             <li>
-              <a href="/events/<%=events[i]._id%>"><%=event[i].name%></a>
+              <a href="/events/<%=events[i]._id%>"><%=events[i].name%></a>
             </li>
           <% } %>
         </ul>
