--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="NavBar">
 
 <button id="navButton">&#x2630</button>
-      <div class='navbar' id="navbar">
+      <div class='navbar' id="navbar" visibility='hidden'>
       <ul>
         <li><a href="/events">Global Events</a></li>
         <!--if logged in-->
