--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,7 +8,7 @@
         <li><a href="/:id/profile">My Profile</a></li>
         <li><a href="/logout">Logout</a></li>
         <!-- if not logged in-->
-        <li><a href="/login">Login</a></li>
+        <li><a href="/auth/login">Login</a></li>
         <!-- -->
         <li><a href="/about">About</a></li>
       </ul>
