--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title><%=event.title%></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+    <title><%=event.name%></title>
   </head>
   <body>
-  <h1><%=event.title%></h1>
-  <% ../partials/events/show.ejs %>
+  <h1><%=event.name%></h1>
+  <% include ../partials/events/show.ejs %>
   <a href="/events">Back</a>
   </body>
 </html>
