--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="NavBar">
 
 <button id="navButton">&#x2630</button>
-      <div class='navbar' id="navbar" visibility='hidden'>
+      <div class='navbar' id="navbar">
       <ul>
         <li><a href="/events">Global Events</a></li>
         <!--if logged in-->
@@ -14,6 +14,8 @@
       </ul>
       </div>
 <script>
+document.getElementById('navButton').style.visibility='hidden'
+
 document.getElementById('navButton').onclick = ()=>{
   let navbar = document.getElementById('navbar');
   if (navbar.style.visibility=='hidden')
