--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,7 +14,7 @@
       </ul>
       </div>
 <script>
-document.getElementById('navButton').style.visibility='hidden'
+document.getElementById('navbar').style.visibility='hidden'
 
 document.getElementById('navButton').onclick = ()=>{
   let navbar = document.getElementById('navbar');
