--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -7,6 +7,7 @@
     <title><%=event.name%></title>
   </head>
   <body>
+  <% include ../partials/events/nav.ejs %>
   <h1><%=event.name%></h1>
   <% include ../partials/events/show.ejs %>
   <a href="/events">Back</a>
