--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,3 +1,11 @@
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+    <title>404 - Page not found</title>
+  </head>
+
 <% include ./partials/nav.ejs %>
 
 <h2>What's up?</h2>
