--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -8,9 +8,10 @@
 
     <% include ../partials/nav.ejs %>
 
-    
+
     <h1>Edit <%=event.name%> </h1>
     <% include ../partials/events/edit.ejs %>
     <a href="/">Back</a>
+    <% include ../partials/footer.ejs %>
   </body>
 </html>
