--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
     <div class="contact">
       <h3>Say Hello</h3>
 
-      <form action="/" method="post">
+      <form class="forms" action="/" method="post">
         <input type="text" placeholder="Leave Comments, Questions, or Suggestions Here!">
         <textarea name="contactUs"></textarea>
         <input type="submit">
