--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -10,7 +10,7 @@
   <% include ../partials/nav.ejs %>
   <h1><%=event.name%></h1>
   <% include ../partials/events/show.ejs %>
-  <a href="/events">Back</a>
+  <a class="links" href="/events">Back</a>
   <% include ../partials/footer.ejs %>
   </body>
 </html>
