--- a/views/partials/auth/Edit.ejs
+++ b/views/partials/auth/Edit.ejs
@@ -1,8 +1,6 @@
-<section>
+<section class="partials">
 
-<form action="/:id/profile" method="put" method="post">
-
-
+<form class="forms" action="/:id/profile" method="put" method="post">
 Username:<br>
 <input type="text" name="username" value="<%=user.username%>"><br>
 Password:<br>
@@ -18,7 +16,7 @@ Img URL:<br>
 Organization:<br>
 <input type="organization" name="orginazation" value="<%=user.orginzation%>"/><br>
 <br>
-<input type="submit" value="Update">
+<input class="buttons" type="submit" value="Update">
 
 </form>
 
