--- a/views/partials/auth/LogIn.ejs
+++ b/views/partials/auth/LogIn.ejs
@@ -1,9 +1,8 @@
-<section>
+<section class="partials">
      <h3>Login</h3>
-     <form action = "/auth/login" method="POST">
+     <form class="forms" action = "/auth/login" method="POST">
        Username: <input type="text" name="username" placeholder="username"><br>
        Password: <input type="text" name="password" placeholder="password"><br>
-       <button type="submit">Login</button>
+       <button class="buttons" type="submit">Login</button>
      </form>
    </section>
-   
