--- a/views/partials/auth/register.ejs
+++ b/views/partials/auth/register.ejs
@@ -1,12 +1,12 @@
-<section>
+<section class="partials">
   <h3>Register</h3>
-    <form action="/auth/register" method="POST">
+    <form class="forms" action="/auth/register" method="POST">
 
       <!-- replace username with email address -->
       <input type="name" name="username" placeholder="username"> <br>
       <input type="text" name="password" placeholder="password"> <br>
 
 
-      <button type="submit">Register</button>
+      <button class="buttons" type="submit">Register</button>
     </form>
 </section>
