--- a/views/partials/events/new.ejs
+++ b/views/partials/events/new.ejs
@@ -1,11 +1,11 @@
-<section>
-<form action="/events" method="POST">
+<section class="partials" >
+<form class="forms" action="/events" method="POST">
         <input type="text" name="name" placeholder="Name"/><br/>
         <input type="date" name="date" placeholder="Date"/><br/>
         <input type='text' name="time" placeholder="Time"/><br/>
         <input type='text' name="location" placeholder="Location Address"/><br/>
         <input type='text' name="type" placeholder="Event Type"/><br/>
         <input type='text' name="about" placeholder="About Event"/><br/>
-        <button type="submit" value="submit">submit</button>
+        <button class="buttons" type="submit" value="submit">submit</button>
       </form>
 </section>
