--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -13,17 +13,13 @@
 
 <h2>My Profile</h2>
   <% include ../partials/auth/edit.ejs %>
-<a href="/events/new">Add New Event</a>
+<a class="links" href="/events/new">Add New Event</a>
 <h2>Hosted Events</h2>
     <% var events = hostedEvents %>
 
 
 <h2>Attended Events</h2>
     <% var events = attendedEvents %>
-
-    <footer>
-
-    </footer>
 
   </body>
 </html>
