--- a/views/partials/events/list.ejs
+++ b/views/partials/events/list.ejs
@@ -1,4 +1,4 @@
-<section>
+<section class="partials">
   <h2>List of Events</h2>
         <ul>
           <% for(let i = 0; i < events.length; i++){ %>
@@ -7,5 +7,4 @@
             </li>
           <% } %>
         </ul>
-      </main>
 <section>
