--- a/views/partials/auth/register.ejs
+++ b/views/partials/auth/register.ejs
@@ -4,7 +4,7 @@
 
       <!-- replace username with email address -->
       <input type="name" name="username" placeholder="username"> <br>
-      <input type="text" name="password" placeholder="password"> <br>
+      <input type="password" name="password" placeholder="password"> <br>
 
 
       <button type="submit">Register</button>
