--- a/views/partials/auth/LogIn.ejs
+++ b/views/partials/auth/LogIn.ejs
@@ -2,8 +2,7 @@
      <h3>Login</h3>
      <form action = "/auth/login" method="POST">
        Username: <input type="text" name="username" placeholder="username"><br>
-       Password: <input type="text" name="password" placeholder="password"><br>
+       Password: <input type="password" name="password" placeholder="password"><br>
        <button type="submit">Login</button>
      </form>
    </section>
-   
