debugged login page

--- a/views/partials/auth/LogIn.ejs
+++ b/views/partials/auth/LogIn.ejs
@@ -2,8 +2,10 @@
      <h3>Login</h3>
      <form action = "/auth/login" method="POST">
        Username: <input type="text" name="username" placeholder="username"><br>
-       Password: <input id="hideRegister" type="password" name="password" placeholder="password">
-         <input type="checkbox" onclick="Toggle()">
+
+       Password: <input id="hidePasswordLog" type="password" name="password" placeholder="password">
+
+         <input type="checkbox" onclick="ToggleLI()">
         Show Password<br>
         <button type="submit">Login</button>
 
@@ -11,8 +13,8 @@
 
        <script>
          // Change the type of input to password or text
-             function Toggle() {
-                 var temp = document.getElementById("hideRegister");
+             function ToggleLI() {
+                 var temp = document.getElementById("hidePasswordLog");
                  if (temp.type === "password") {
                      temp.type = "text";
                  }
