--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,9 +8,9 @@
     </head>
     <body>
     
-    <% include ./partials/nav.ejs %>
+    <% include ('./partials/nav.ejs') %>
 
-    <% include ./partials/events/list %>
+    <% include ('./partials/events/list.ejs') %>
 
     </body>
 </html>
