--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     
     <% include ('./partials/nav.ejs') %>
 
-    <% include ('./partials/events/list.ejs') %>
+    <%- include ./partials/events/list.ejs %>
 
     </body>
 </html>
