--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,10 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    
-    <% include ('./partials/nav.ejs') %>
+    TEST
+
+
+    <%- include ./partials/nav.ejs %>
 
     <%- include ./partials/events/list.ejs %>
 
