--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     TEST
 
 
-    <%- include ./partials/nav.ejs %>
+    <%- include ./app/partials/nav.ejs %>
 
     <%- include ./partials/events/list.ejs %>
 
