--- a/views/partials/events/new.ejs
+++ b/views/partials/events/new.ejs
@@ -1,6 +1,7 @@
 <section class="partials" >
 <form class="forms" action="/events" method="POST">
         <input type="text" name="name" placeholder="Name"/><br/>
+        <input type="text" name="host" value="<%=username%>"/><br/>
         <input type="date" name="date" placeholder="Date"/><br/>
         <input type='text' name="time" placeholder="Time"/><br/>
         <input type='text' name="location" placeholder="Location Address"/><br/>
