--- a/views/partials/events/show.ejs
+++ b/views/partials/events/show.ejs
@@ -3,6 +3,9 @@
     <li>Name:
       <%=event.name%>
     </li><br/>
+    <li>Host:
+      <%=event.host%>
+    </li><br/>
     <li>Date:
       <%=event.date%>
     </li><br/>
