--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -11,7 +11,8 @@
 <% include ../partials/nav.ejs %>
     </header>
 
-<h2>My Profile</h2>
+<h2>Hello, <%=username%> </h2>
+<h4>My Profile</h4>
   <% include ../partials/auth/edit.ejs %>
 <a class="links" href="/events/new">Add New Event</a>
 <h2>Hosted Events</h2>
