--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,9 +10,9 @@
     TEST
 
 
-    <%- include ./partials/nav.ejs %>
+    <% include partials/nav.ejs %>
 
-    <%- include ./partials/events/list.ejs %>
+    <% include partials/events/list.ejs %>
 
     </body>
 </html>
