logout session is destroying session and redirecting back to events

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,7 +9,7 @@
 
 
         <li><a href="/:id/profile">My Profile</a></li>
-        <li><a href="/auth/login">Logout</a></li>
+        <li><a href="/auth/logout">Logout</a></li>
 
 
         <li><a href="/auth/login">Login</a></li>
