Edit functionality fixed

--- a/views/partials/auth/Edit.ejs
+++ b/views/partials/auth/Edit.ejs
@@ -1,6 +1,6 @@
 <section class="partials">
 
-<form class="forms" action="/:id/profile" method="put" method="post">
+<form class="forms" action="/:id/profile" method="PUT" method="POST">
 Username:<br>
 <input type="text" name="username" value="<%=user.username%>"><br>
 Password:<br>
