updated partial links

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
     <title>What's Happening?</title>
   </head>
   <body>
-  <% include ./partials/nav.ejs %>
+  <% include partials/nav.ejs %>
     <h1>We Are What's Happening</h1>
 
     <img class="cdj" src="">
