--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,9 +8,9 @@
     </head>
     <body>
 
-    <% include ./partials/nav.ejs %>
+    <% include partials/nav.ejs %>
 
-    <% include ./partials/events/list.ejs %>
-    <% include ./partials/footer.ejs %>
+    <% include partials/events/list.ejs %>
+    <% include partials/footer.ejs %>
     </body>
 </html>
