--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,15 +7,15 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-<% include ./partials/nav.ejs %>
+<% include partials/nav.ejs %>
 
 <h1>hi</h1>
 
-<% include ./partials/auth/login.ejs %>
+<% include partials/auth/login.ejs %>
 
-<% include ./partials/auth/register.ejs %>
+<% include partials/auth/register.ejs %>
 
-<% include ./partials/footer.ejs %>
+<% include partials/footer.ejs %>
 
   </body>
 </html>
