--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,7 +6,7 @@
     <title>404 - Page not found</title>
   </head>
 
-<% include ./partials/nav.ejs %>
+<% include partials/nav.ejs %>
 
 <h2>What's up?</h2>
 <h1>404 - not this page</h1>
