--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -17,8 +17,8 @@
 <a class="links" href="/events/new">Add New Event</a>
 <h2>Hosted Events</h2>
 <ul>
-  <% for (let i = 0; i < user.length; i++){%>
-       <li><a href="/user/<%=user[i].id%>"><%=user[i].hostedEvents %></a></li>
+  <% for (let i = 0; i < hostedEvents.length; i++){%>
+       <li><a href="/events/<%=hostedEvents[i].id%>"><%=hostedEvents[i]%></a></li>
   <%}%>
 </ul>
 
