--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -18,7 +18,7 @@
 <h2>Hosted Events</h2>
 <ul>
   <% for (let i = 0; i < hostedEvents.length; i++){%>
-       <li><a href="/events/<%=hostedEvents[i].id%>"><%=hostedEvents[i]%></a></li>
+       <li><a href="/events/<%=hostedEvents[i].id%>"><%=hostedEvents[i].name%></a></li>
   <%}%>
 </ul>
 
