troubleshooting for 3 hours

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,9 +6,7 @@
         <li><a href="/events">Global Events</a></li>
 
 
-
-
-        <li><a href="/:id/profile">My Profile</a></li>
+        <li><a href="user/id/profile">My Profile</a></li>
         <li><a href="/auth/logout">Logout</a></li>
 
 
