--- a/views/partials/auth/Edit.ejs
+++ b/views/partials/auth/Edit.ejs
@@ -1,7 +1,7 @@
 <section class="partials">
 
 
-<form class="forms" action="/:id/profile?_method=PUT" method="POST">
+<form class="forms" action="/user/<%=user._id%>?_method=PUT" method="POST">
 Username:<br>
 <input type="text" name="username" value="<%=user.username%>"><br>
 Password:<br>
@@ -15,7 +15,7 @@ Last Name:<br>
 Img URL:<br>
 <input type="url" name="image" value="<%=user.image%>"><br>
 Organization:<br>
-<input type="organization" name="orginazation" value="<%=user.organization%>"/><br>
+<input type="organization" name="organization" value="<%=user.organization%>"/><br>
 <br>
 <input class="buttons" type="submit" value="Update">
 
