added google fonts in head

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <title>404 - Page not found</title>
   </head>
 
@@ -10,5 +11,3 @@
 
 <h2>What's up?</h2>
 <h1>404 - not this page</h1>
-
-
