--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <title>ADD A NEW EVENT</title>
   </head>
   <body>
