font applied to h1, class to iframe

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
   <body>
 <% include partials/nav.ejs %>
 
-<h1>hi</h1>
+<h1>Welcome to What's Happening</h1>
 
 <% include partials/auth/login.ejs %>
 
