--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,19 @@ font-family: 'Philosopher', sans-serif;
 }
 
 
+#title {
+  text-align: center;
+}
+
+#contactEmail {
+  width: 200px;
+  height: 20px;
+}
+
+#contactComment {
+  width: 300px;
+  height: 200px;
+}
 
 
 /* ABOUT PAGE */
