--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,9 +8,10 @@
     <title>What's Happening?</title>
   </head>
   <body>
-  <% include partials/nav.ejs %>
-    <h1>We Are What's Happening</h1>
 
+
+  <% include partials/nav.ejs %>
+    <h1 id="title">We Are What's Happening</h1>
 
 
 
@@ -24,10 +25,11 @@
 </div>
 
 <div class="contact" id="aboutRight">
+
   <h3>Or Leave Us a Message</h3>
-      <form class="forms" action="/" method="post">
-        <input type="email" placeholder="Email Address">
-        <textarea name="contactUs" placeholder="Leave Comments, Questions, or Suggestions Here"></textarea>
+      <form id="contactUs" action="/" method="post">
+        <input id="contactEmail" type="email" placeholder="Email Address">
+        <textarea id="contactComment" name="contactUs" placeholder="Leave Comments, Questions, or Suggestions Here"></textarea>
         <input type="submit">
       </form>
     </div>
