--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,8 @@
 
+body {
+  background-color: #f7f7f7;
+}
+
 h1 {
 font-family: 'Philosopher', sans-serif;
 }
@@ -6,44 +10,61 @@ font-family: 'Philosopher', sans-serif;
 
 #title {
   text-align: center;
+  margin-bottom: 50px;
 }
+
+.clearfix:after {
+   content: " "; /* Older browser do not support empty content */
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
+
+
+#contactComment, #contactEmail {
+  border-radius: 2%;
+}
+
+#contactComment {
+  margin-top: 25px;
+  margin-bottom: 10px;
+  width: 300px;
+  height: 250px;
+}
+
 
 #contactEmail {
   width: 200px;
   height: 20px;
 }
 
-#contactComment {
-  width: 300px;
-  height: 200px;
-}
 
 
 /* ABOUT PAGE */
 
 .about {
-  margin: 0 auto;
+  text-transform: capitalize;
+
 }
+
 
 #aboutWrapper {
     text-align: center;
      width: 1000px;
      margin: 0 auto;
-     border: 5px solid black;
+     background-color: #F2F0E6;
+     /* border: 5px solid black; */
      position: relative;
+     padding: 50px;
+     margin-bottom: 50px;
 }
 #aboutLeft, #aboutRight {
+  background-color: white;
+  border-radius: 2%;
     border: 1px solid black;
     float: left;
     height: 450px;
-    color: white;
     width: 400px;
     margin-left: 50px;
-}
-#aboutLeft {
-     background-color: pink;
-}
-
-#aboutRight {
-     background-color: #777;
 }
