--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,21 @@ font-family: 'Philosopher', sans-serif;
 }
 
 
+/* HEADER */
+
+
+
+/* ABOUT PAGE */
+
 #title {
   text-align: center;
-  margin-bottom: 50px;
+  text-transform: capitalize;
+  background-color: #F2F0E6;
+  width: 1100px;
+  height: 100px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  line-height: 100px;
 }
 
 .clearfix:after {
@@ -41,14 +53,6 @@ font-family: 'Philosopher', sans-serif;
 
 
 
-/* ABOUT PAGE */
-
-.about {
-  text-transform: capitalize;
-
-}
-
-
 #aboutWrapper {
     text-align: center;
      width: 1000px;
@@ -59,6 +63,7 @@ font-family: 'Philosopher', sans-serif;
      padding: 50px;
      margin-bottom: 50px;
 }
+
 #aboutLeft, #aboutRight {
   background-color: white;
   border-radius: 2%;
@@ -67,4 +72,14 @@ font-family: 'Philosopher', sans-serif;
     height: 450px;
     width: 400px;
     margin-left: 50px;
+}
+
+#about {
+  background-color: blue;
+  text-transform: capitalize;
+  margin: 0 auto;
+}
+
+.headerTitle {
+  text-transform: capitalize;
 }
