--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 
 body {
   background-color: #f7f7f7;
+  margin: -25px 0px 0px 0px;
+  padding: 0;
 }
 
 h1 {
@@ -10,6 +12,14 @@ font-family: 'Philosopher', sans-serif;
 
 /* HEADER */
 
+#header {
+  background-color: blue;
+  text-align: center;
+  height: 100px;
+  padding: 0px;
+  margin-top: 0px;
+  padding: 0px;
+}
 
 
 /* ABOUT PAGE */
