--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link href="css/reset.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <title>What's Happening?</title>
   </head>
