loginAndLogoutAlertsMade and UserNameAppearsWhenloggedIn

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,8 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-
     <% include partials/nav.ejs %>
+    <h2>Hello, <%=username%> </h2>
     <% include partials/events/list.ejs %>
     <% include partials/footer.ejs %>
     </body>
