--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,14 +144,23 @@ ul {
     margin-top: 25px;
 }
 
+.homeImages {
+  display: flex;
+  justify-content: center;
+}
 
 .atx {
   height: 300px;
-  width: 300px;
+  width: 25%;
   border-radius: 50%;
-  display: block;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  display: inline-block;
+  /* margin-left: 50px; */
+}
 
+#centerImg {
+  margin-left: 75px;
+  margin-right: 75px;
 }
 
 
