--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,8 +12,12 @@
     <% include partials/header.ejs %>
     <% include partials/nav.ejs %>
 
-    <img src="https://s3-media4.fl.yelpcdn.com/bphoto/Vh4TyXqhOF89pArewIzzGg/o.jpg" class="atx">
-    <img src="https://austinot.com/wp-content/uploads/2015/09/Barton-Springs-Featured-Image.jpg" class="atx">
+    <div class="homeImages">
+    <img src="http://res.cloudinary.com/culturemap-com/image/upload/q_auto/ar_4:3,c_fill,g_faces:center,w_1200/v1473280540/photos/175603_original.jpg" class="atx">
+
+    <img src="https://s3-media4.fl.yelpcdn.com/bphoto/Vh4TyXqhOF89pArewIzzGg/o.jpg" class="atx" id="centerImg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/360_Barton_Springs_5July08_%289%29.JPG/1200px-360_Barton_Springs_5July08_%289%29.JPG" class="atx">
+</div>
 
     <h2 class="hello">Hello, <%=username%> </h2>
     <% include partials/events/list.ejs %>
