fixed path issue w css

--- a/views/partials/auth/login.ejs
+++ b/views/partials/auth/login.ejs
@@ -1,3 +1,11 @@
+
+<style>
+  body {
+    background-color: '';
+  }
+</style>
+
+<div class = "lrWrapper">
 <section class="partials">
      <h3>Login</h3>
      <form class="forms" action = "/auth/login" method="POST">
@@ -11,6 +19,7 @@
         <button type="submit">Login</button>
 
 
+</div>
 
        <script>
          // Change the type of input to password or text
