--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,9 +145,9 @@ ul {
 }
 
 .list {
-  font-size: 28px;
-  padding: 30px;
+  font-size: 24px;
 }
+
 
 .homeImages {
   display: flex;
@@ -168,7 +168,7 @@ ul {
   margin-right: 75px;
 }
 
-
+/* FOOTER */
 
 #footer {
   left: 0;
@@ -183,4 +183,8 @@ ul {
 
 .headerTitle {
   text-transform: capitalize;
+}
+
+.lrWrapper {
+  background-color: black;
 }
