--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,14 +2,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-=======
->>>>>>> bb767f92fde3c9003c3e2d8132fa834a8df8f345
+
     <title>404 - Page not found</title>
   </head>
 
+<% include partials/header.ejs %>
 <% include partials/nav.ejs %>
 
 <h2>What's up?</h2>
