--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <!-- <link href="css/reset.css" rel="stylesheet"> -->
+    <link href="/css/style.css" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-
-
+    <title>What's Happening?</title>
   </head>
+
+
   <body>
+<% include partials/header.ejs %>
 <% include partials/nav.ejs %>
 
 
