login and register boxes in div

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,9 +18,11 @@
 
 <h1>Welcome to What's Happening</h1>
 
+<div id="lrWrapper">
 <% include partials/auth/login.ejs %>
-
 <% include partials/auth/register.ejs %>
+</div>
+
 
 <% include partials/footer.ejs %>
 
