--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,6 +185,29 @@ ul {
   text-transform: capitalize;
 }
 
-.lrWrapper {
-  background-color: black;
+/* LOGIN PAGE */
+#lrWrapper {
+  background-color: #e5e5e5;
+  width: 80%;
+  height: 300px;
+  display: flex;
+  /* justify-content: center;  */
+}
+
+.lrDiv {
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 2%;
+    border: 1px solid black;
+    height: 200px;
+    width: 300px;
+    align-items: center;
+    vertical-align: middle;
+    display: inline-block;
+    position: relative;
+    margin-top: 25px;
+}
+
+h3 {
+  text-align: center;
 }
