--- a/views/partials/auth/login.ejs
+++ b/views/partials/auth/login.ejs
@@ -5,14 +5,14 @@
   }
 </style>
 
-<div class = "lrWrapper">
+  <div class="lrDiv">
 <section class="partials">
      <h3>Login</h3>
      <form class="forms" action = "/auth/login" method="POST">
-       Username: <input type="text" name="username" placeholder="username"><br>
+       <input type="text" name="username" placeholder="username"><br>
 
 
-       Password: <input id="hidePasswordLog" type="password" name="password" placeholder="password">
+       <input id="hidePasswordLog" type="password" name="password" placeholder="password">
 
          <input type="checkbox" onclick="ToggleLI()">
         Show Password<br>
