--- a/views/partials/auth/register.ejs
+++ b/views/partials/auth/register.ejs
@@ -1,4 +1,5 @@
 <section class="partials">
+  <div class="lrDiv">
   <h3>Register</h3>
     <form class="forms" action="/auth/register" method="POST">
 
@@ -11,7 +12,7 @@
       <input type="checkbox" onclick="ToggleR()">
      Show Password<br>
       <button id="submit" type="submit" onclick="alertToLogin()" >Register</button>
-
+</div>
       <script>
             function ToggleR() {
                 var temp = document.getElementById("hidePasswordReg");
