login and register styled

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,6 +16,8 @@
 <% include partials/nav.ejs %>
 
 
+<img src="https://www.attrievents.in/wp-content/uploads/2017/05/LIVE-EVENTS.jpg" class="loginBanner">
+
 <h1>Welcome to What's Happening</h1>
 
 <div id="lrWrapper">
